--- a/src/components/Home/Navbar.css
+++ b/src/components/Home/Navbar.css
@@ -2,7 +2,7 @@
 .Navbar {
   position: sticky;
   top: 0;
-  max-width: 1370px;
+  max-width: 100%;
   height: 90px;
   margin: 0 auto;
   margin-bottom: -90px;
@@ -193,6 +193,7 @@
   border-radius: 10px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12),
     0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
+  z-index: 100;
 }
 .userOptions li a {
   all: unset;
@@ -234,15 +235,20 @@
   display: none;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1000px) {
   #MobileProfileLink {
     display: flex;
   }
   #searchButton svg {
     color: rgba(247, 252, 255, 0.959);
+    width: 2em;
+    height: 2em;
   }
   .SearchBar {
     margin-left: 0;
+  }
+  .searchInput {
+    transition: none;
   }
 }
 @media (max-width: 800px) {
@@ -254,6 +260,7 @@
   }
   .navLinks {
     width: 70%;
+    justify-content: flex-end;
   }
   .navLinksLayer {
     width: inherit;
@@ -268,6 +275,6 @@
     height: 45px;
   }
   .userOptions {
-    right: 6.3%;
+    right: 5%;
   }
 }
